fix: Some style for GroupsManager on small device

--- a/src/styles/contactGroupCreation.styl
+++ b/src/styles/contactGroupCreation.styl
@@ -24,6 +24,15 @@ it overrides nothing so there's no need for
     width rem(384) !important
     z-index 100000 !important
     right 0
+
+    +small-screen()
+            top auto !important
+            width 100% !important
+
+.react-select__custom__container
+    +small-screen()
+        position inherit !important
+
 .react-select__container
     display inline-block
     vertical-align middle
@@ -44,3 +53,5 @@ it overrides nothing so there's no need for
 
 .react-select__menu-list
     text-align initial
+    +small-screen()
+        max-width inherit !important
